--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=server
+#Internationalization = i18n
+#Message bundles encoding
+spring.messages.encoding=UTF-8
+
+#Connexion à la base de données
+spring.datasource.url=jdbc:sqlserver://localhost;databasename=Auctions;integratedSecurity=false;encrypt=false;trustServerCertificate=false
+spring.datasource.username=sa
+spring.datasource.password=Pa$$w0rd
+
+#Détail des requêtes pour le développement
+logging.level.org.springframework.jdbc.core=TRACE
+
