--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,8 +3,13 @@ spring.application.name=server
 #Message bundles encoding
 spring.messages.encoding=UTF-8
 
+#Jwt properties
+#Valeur a mettre dans le .env
+jwt.secret=mySecretKey
+jwt.expirationMs=7200000
+
 #Connexion à la base de données
-spring.datasource.url=jdbc:sqlserver://localhost;databasename=Auctions;integratedSecurity=false;encrypt=false;trustServerCertificate=false
+spring.datasource.url=jdbc:sqlserver://localhost;databasename=aaa;integratedSecurity=false;encrypt=false;trustServerCertificate=false
 spring.datasource.username=sa
 spring.datasource.password=Pa$$w0rd
 
