--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.messages.encoding=UTF-8
 jwt.secret=mySecretKey
 jwt.expirationMs=7200000
 
-#Connexion à la base de données
-spring.datasource.url=jdbc:sqlserver://localhost;databasename=aaa;integratedSecurity=false;encrypt=false;trustServerCertificate=false
+#Connexion Ã  la base de donnÃ©es
+spring.datasource.url=jdbc:sqlserver://localhost;databasename=Auctions;integratedSecurity=false;encrypt=false;trustServerCertificate=false
 spring.datasource.username=sa
 spring.datasource.password=Pa$$w0rd
 
-#Détail des requêtes pour le développement
+#DÃ©tail des requÃªtes pour le dÃ©veloppement
 logging.level.org.springframework.jdbc.core=TRACE
 
