--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=server
 #Internationalization = i18n
 #Message bundles encoding
 spring.messages.encoding=UTF-8
+security.jwt.token.secret-key=secretkey
+jwt.secret=mySecretKey
 #Connexion à la base de données
 spring.datasource.url=jdbc:sqlserver://localhost;databasename=Auctions;integratedSecurity=false;encrypt=false;trustServerCertificate=false
 spring.datasource.username=sa
