--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,16 @@
   },
   "dependencies": {
     "@openreplay/tracker-zustand": "^1.0.3",
+    "@reduxjs/toolkit": "^2.2.1",
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "tailwindcss": "^3.4.1",
-    "zustand": "^4.5.2"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
