Issue with localdate

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.password=Pa$$w0rd
 #Détail des requêtes pour le développement
 logging.level.org.springframework.jdbc.core=TRACE
 
+spring.jackson.serialization.write-dates-as-timestamps=false
