--- a/server/build.gradle
+++ b/server/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     annotationProcessor 'org.projectlombok:lombok'
     runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.10.1'
 
 
 }
