--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=server
 #Message bundles encoding
 spring.messages.encoding=UTF-8
 #Connexion à la base de données
-spring.datasource.url=jdbc:sqlserver://localhost;databasename=Auctions;integratedSecurity=false;encrypt=false;trustServerCertificate=false
-spring.datasource.username=sa
-spring.datasource.password=Pa$$w0rd
+spring.datasource.url=jdbc:mysql://localhost/auctions?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 #Détail des requêtes pour le développement
 logging.level.org.springframework.jdbc.core=TRACE
 
