--- a/server/build.gradle
+++ b/server/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.10.1'
     runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
 
 
 }
