--- a/package.json
+++ b/package.json
@@ -1,7 +1,1 @@
-{
-	"dependencies": {
-		"@types/jwt-decode": "^3.1.0",
-		"jwt-decode": "^4.0.0",
-		"react-toastify": "^10.0.5"
-	}
-}
+{"devDependencies":{"@types/node":"^20.11.30"}}
