--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.1"
   },
