Adding of filters and adding of auctions management

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
@@ -21,30 +17,15 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "src/*"
-      ],
-      "@components/*": [
-        "src/components/*"
-      ],
-      "@api": [
-        "src/api"
-      ],
-      "@api/*": [
-        "src/api/*"
-      ],
-      "@utils": [
-        "src/utils"
-      ],
-      "@tests-utils": [
-        "src/utils/tests-utils"
-      ],
-      "@services/*": [
-        "src/services/*"
-      ],
-      "@assets": [
-        "src/assets"
-      ]
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@api": ["src/api"],
+      "@api/*": ["src/api/*"],
+      "@utils": ["src/utils"],
+      "@tests-utils": ["src/utils/tests-utils"],
+      "@services/*": ["src/services/*"],
+      "@assets": ["src/assets"],
+      "@hooks": ["src/hooks"]
     }
   }
 }
