--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,11 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "tailwind-datepicker-react": "^1.4.3",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@types/node": "^20.11.30",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
