--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,9 +5,15 @@ spring.messages.encoding=UTF-8
 security.jwt.token.secret-key=secretkey
 jwt.secret=mySecretKey
 #Connexion à la base de données
-spring.datasource.url=jdbc:sqlserver://localhost;databasename=Auctions;integratedSecurity=false;encrypt=false;trustServerCertificate=false
-spring.datasource.username=sa
-spring.datasource.password=Pa$$w0rd
+
+#spring.datasource.url=jdbc:sqlserver://localhost;databasename=Auctions;integratedSecurity=false;encrypt=false;trustServerCertificate=false
+#spring.datasource.username=sa
+#spring.datasource.password=Pa$$w0rd
+
+
+spring.datasource.url=jdbc:mysql://localhost/auctions?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 #Détail des requêtes pour le développement
 logging.level.org.springframework.jdbc.core=TRACE
 
