--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.5",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
@@ -25,6 +27,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "tailwind-datepicker-react": "^1.4.3",
     "tailwindcss": "^3.4.1",
     "yup": "^1.4.0"
   },
