--- a/server/build.gradle
+++ b/server/build.gradle
@@ -25,9 +25,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-   // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-   //implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
+    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
     //implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     testImplementation 'org.springframework.security:spring-security-test'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -44,6 +44,7 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.10.1'
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
+    implementation 'commons-io:commons-io:2.8.0'
 
 
 }
