--- a/server/build.gradle
+++ b/server/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.10.1'
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
+
 
 
 }
