--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.password=Pa$$w0rd
 #Détail des requêtes pour le développement
 logging.level.org.springframework.jdbc.core=TRACE
 
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
